# src/main/resources/static/openapi/api.yaml
@@ -9,6 +9,159 @@ servers:
   - url: https://mock.nk-order-process-ms.com/api/v1
     description: Mock server for testing endpoints with example data
 paths:
+  /order:
+    get:
+      summary: Retrieve a paginated list of orders
+      operationId: listOrders
+      parameters:
+        - name: page
+          in: query
+          description: The page number to retrieve (zero-based index).
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          description: The number of orders per page.
+          required: false
+          schema:
+            type: integer
+            default: 10
+      responses:
+        '200':
+          description: A paginated list of orders
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  content:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Order'
+                  totalElements:
+                    type: integer
+                  totalPages:
+                    type: integer
+                  size:
+                    type: integer
+                  number:
+                    type: integer
+      tags:
+        - Order
+    post:
+      summary: Create a new order
+      operationId: createOrder
+      requestBody:
+        description: Order to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderInput'
+      responses:
+        '201':
+          description: Order created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+      tags:
+        - Order
+  /order/{id}:
+    get:
+      summary: Retrieve an order by ID
+      operationId: getOrderById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the order to retrieve
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Order found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '404':
+          description: Order not found
+      tags:
+        - Order
+    put:
+      summary: Update an existing order by ID
+      operationId: updateOrder
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the order to update
+          schema:
+            type: string
+      requestBody:
+        description: Updated order data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderInput'
+      responses:
+        '200':
+          description: Order updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '404':
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Order with ID 64b7fd18e13e3c76f1f6d4b2 not found.
+        '400':
+          description: Bad request. Validation failed.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Invalid data.
+      tags:
+        - Order
+    delete:
+      summary: Delete an order by ID
+      operationId: deleteOrder
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the order to delete
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Order deleted successfully
+        '404':
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Order with ID 64b7fd18e13e3c76f1f6d4b2 not found.
+      tags:
+        - Order
   /item:
     get:
       summary: Retrieve a paginated list of items
@@ -305,6 +458,106 @@ paths:
         - Customer
 components:
   schemas:
+    Order:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the order
+          example: "64b7fd18e13e3c76f1f6d4b2"
+        orderId:
+          type: string
+          description: Unique order identifier
+          example: "11"
+        orderStatus:
+          type: string
+          description: Status of the order
+          example: "CALCULATED"
+        notes:
+          type: string
+          description: Additional notes for the order
+          example: "Deliver in the night."
+        customer:
+          $ref: '#/components/schemas/Customer'
+        items:
+          type: array
+          description: List of items in the order
+          items:
+            $ref: '#/components/schemas/OrderItem'
+        totalAmount:
+          type: number
+          format: float
+          description: Total amount for the order
+          example: 580.44
+        totalItems:
+          type: integer
+          description: Total quantity of items in the order
+          example: 7
+    OrderInput:
+      type: object
+      properties:
+        orderId:
+          type: string
+          description: Unique order identifier
+          example: "11"
+        orderStatus:
+          type: string
+          description: Status of the order
+          example: "CALCULATED"
+        notes:
+          type: string
+          description: Additional notes for the order
+          example: "Deliver in the night."
+        customerId:
+          type: string
+          description: ID of the customer related to the order
+          example: "64b7fd18e13e3c76f1f6d4b2"
+        items:
+          type: array
+          description: List of items in the order
+          items:
+            $ref: '#/components/schemas/OrderItemInput'
+        totalAmount:
+          type: number
+          format: float
+          description: Total amount for the order
+          example: 580.44
+        totalItems:
+          type: integer
+          description: Total quantity of items in the order
+          example: 7
+    OrderItem:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the order item
+          example: "64b7fd18e13e3c76f1f6d4b4"
+        item:
+          $ref: '#/components/schemas/Item'
+        quantity:
+          type: integer
+          description: Quantity of the item in the order
+          example: 3
+        subtotal:
+          type: number
+          format: float
+          description: Subtotal for the item (quantity * unitPrice)
+          example: 240.0
+    OrderItemInput:
+      type: object
+      properties:
+        item:
+          $ref: '#/components/schemas/ItemInput'
+        quantity:
+          type: integer
+          description: Quantity of the item in the order
+          example: 3
+        subtotal:
+          type: number
+          format: float
+          description: Subtotal for the item (quantity * unitPrice)
+          example: 240.0
     Item:
       type: object
       properties:
